--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,14 +2,14 @@ doctype 5
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
-    script(type="text/javascript", src="/javascripts/chatLib.js")
-    script(type="text/javascript", src="/javascripts/zTool.js")
-    script(type="text/javascript", src="/javascripts/jquery.js")
-    script(type="text/javascript", src="/javascripts/DateUtil.js")
-    script(type="text/javascript", src="/javascripts/chat.js")
+    link(rel='stylesheet', href='stylesheets/style.css')
+    link(rel='stylesheet', href='bootstrap/docs/assets/css/bootstrap.css')
+    link(rel='stylesheet', href='bootstrap/docs/assets/css/bootstrap-responsive.css')
+    script(type="text/javascript", src="javascripts/chatLib.js")
+    script(type="text/javascript", src="javascripts/zTool.js")
+    script(type="text/javascript", src="jquery/jquery.min.js")
+    script(type="text/javascript", src="javascripts/DateUtil.js")
+    script(type="text/javascript", src="javascripts/chat.js")
     
   body
     block content
