--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ block content
             #inputDiv
             textarea#message(placeholder='嗨，随便说点啥呗')
             div(style='overflow: hidden;')
-                input#createroom.btn(type='button', value='创建聊天室')
+                input#createroom.btn(type='button', value='加入大众视频聊天室')
                 input#send.btn.btn-success(type='button', value='发送')
         .talkRight
             #onlineUsers 
