--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,9 @@ html
     script(type="text/javascript", src="jquery/jquery.min.js")
     script(type="text/javascript", src="javascripts/DateUtil.js")
     script(type="text/javascript", src="javascripts/chat.js")
-    
+    script(type="text/javascript", src="javascripts/cufon-yui.js")
+    script(type="text/javascript", src="javascripts/brokenrecords_400.font.js")  
+    script(type="text/javascript", src="javascripts/jquery.rte.js")  
+
   body
     block content
