--- a/views/rtc.jade
+++ b/views/rtc.jade
@@ -2,14 +2,16 @@ html
   head
     title Example webrtc.io
     link(type='text/css', href='stylesheets/rtcstyle.css', rel='stylesheet')
+    link(rel='stylesheet', href='bootstrap/docs/assets/css/bootstrap.css')
+    link(rel='stylesheet', href='bootstrap/docs/assets/css/bootstrap-responsive.css')
     script(src='/javascripts/webrtc-client.js')
     script(src='/javascripts/client.js')  
   body(onload='init()')
     #videos
       video#you.flip(autoplay='autoplay')
     #chatbox
-      button#fullscreen Enter Full Screen
-      button#newRoom Create A New Room
+      button.btn#fullscreen Enter Full Screen
+      button.btn#newRoom Create A New Room
       #messages
       br
       input#chatinput(type='text')
